tdf#135016 DOCX export: fix unexpected error on save with undo/redo

Regression from commit d379d18666aa42031359ca8eb34b0021960347ae (oox:
import WPS shape with text as shape with textbox, 2014-06-18), then
problem was that when undo restored text deleted by cut, we ended up
with an SwXShape that had no frame format.

Fix the problem by deleting the cached old UNO wrapper after changing
the association between a textbox's shape and text frame.

An alternative would be to handle errors better when the TextBox UNO
property is not of type bool, but that would still lead to silent data
loss, so don't fix the problem that way.

Change-Id: Id45ad292befc746e7c49a3b827c91efd069d29df