sw/Module_sw.mk
@@ -119,6 +119,7 @@ $(eval $(call gb_Module_add_slowcheck_targets,sw,\
     CppunitTest_sw_core_objectpositioning \
     CppunitTest_sw_core_unocore \
     CppunitTest_sw_core_crsr \
+    CppunitTest_sw_core_undo \
 ))
 
 ifneq ($(DISABLE_GUI),TRUE)
